<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/space"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.3">
        <LinearLayout
            android:layout_weight="0.15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <Button
                android:id="@+id/btnStartAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_tracking_from"
                android:layout_weight="0.4"/>
            <Button
                android:id="@+id/btnCancelAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_tracking_at"
                android:layout_weight="0.4"/>
        </LinearLayout>

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="time"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/schedule_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/schedule_now"
            android:layout_weight="0.15"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_weight="0.7"/>
</LinearLayout>