<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/default_prompt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/gradient3"
            app:cardCornerRadius="4dp">
            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/default_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:id="@+id/manual_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="4dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutManaulButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textManualPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/manual_setting_prompt"
                    android:textSize="16sp" />
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/editTextTimeStart"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:drawableRight="@drawable/icons_clock_24"
                        android:ems="12"
                        android:text="@string/start_tracking_from" />
                    <TextView
                        android:id="@+id/textview_start_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="6:00 AM"
                        android:textAlignment="center"
                        android:textSize="16sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/editTextTimeEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="12"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:drawableRight="@drawable/icons_clock_24"
                        android:text="@string/end_tracking_at" />
                    <TextView
                        android:id="@+id/textview_end_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="7:00 PM"
                        android:textAlignment="center"
                        android:textSize="16sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_duration"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="4dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:text="@string/duration_prompt"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <Spinner
                android:id="@+id/duration_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_action"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/gradient5"
        app:cardCornerRadius="4dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:text="@string/start_prompt"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <ImageButton
                android:id="@+id/button_start_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_button"
                android:src="@drawable/icons8_play_24" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scrollbars="vertical" />
</androidx.appcompat.widget.LinearLayoutCompat>